--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#988366" />
     <meta name="msapplication-TileColor" content="#fafafa" />
     <meta name="msapplication-TileImage" content="/mstile-144x144.png" />
-    <meta name="theme-color" content="#f1f0ed" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Espresso Wallet - A simple and free multi currency expense tracker!" />
+    <meta name="theme-color" content="#f1f0ed" data-react-helmet="true" />
     <title>Espresso Wallet</title>
   </head>
   <body>
